--- a/index.html
+++ b/index.html
@@ -19,21 +19,30 @@
         
         <div class="card__content">
             <div class="card__content-text">
-                <h2>Get insights that help your business grow.</h2>
+                <h2>Get <span class="insights">insights</span> that help your business grow.</h2>
                 <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
             </div>
             <div class="card__content-stats">
                 <div class="stat">
-                    <h2>10k+</h2>
-                    <p>COMPANIES</p>
+                    <p>
+                        <span class="stat__number">10k+</span>
+                        <br>
+                        COMPANIES
+                    </p>
                 </div>
                 <div class="stat">
-                    <h2>314</h2>
-                    <p>TEMPLATES</p>
+                    <p>
+                        <span class="stat__number">314</span>
+                        <br>
+                        TEMPLATES
+                    </p>
                 </div>
                 <div class="stat">
-                    <h2>12M+</h2>
-                    <p>QUERIES</p>
+                    <p>
+                        <span class="stat__number">12M+</span>
+                        <br>
+                        QUERIES
+                    </p>
                 </div>
             </div>
         </div>
